[package]
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2021"
name = "mahf"
version = "0.1.0"
description = "A framework for modular construction and evaluation of metaheuristics."
license = "GPL-3.0-or-later"
repository = "https://github.com/mahf-opt/mahf"
keywords = ["heuristic", "metaheuristic", "optimization"]
categories = ["science", "algorithms"]

[dependencies]
anyhow = "1.0.51"
ciborium = "0.2.0"
coco-rs = "0.6"
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"]}
embed-doc-image = "0.1.4"
erased-serde = "0.3.16"
float_eq = "0.7.0"
num_cpus = "1.13.0"
pest = "2.1.3"
pest_consume = "1.1.1"
pest_derive = "2.1.0"
rand = "0.8.4"
rand_distr = "0.4.2"
ron = "0.7.0"
rprompt = "1.0.5"
serde = {version = "1.0.131", features = ["derive"]}
trait-set = "0.3.0"
dyn-clone = "1.0.9"
derivative = "2.2.0"
itertools = "0.10.5"
better_any = { version = "0.2.0", features = ["derive"] }
scoped_threadpool = "0.1.9"

[patch.crates-io]
better_typeid_derive = { git = "https://github.com/luleyleo/better_any", branch = "no-use-tidable", package = "better_typeid_derive" }
coco-rs = { git = "https://github.com/luleyleo/coco", branch = "rust-0.6" }

[dev-dependencies]
proptest = "1.0.0"

[build-dependencies]
cc = "1.0.72"
