[package]
name = "mahf"
version = "0.1.0"
authors = [
    "Leopold Luley <git@leopoldluley.de>",
    "Helena Stegherr <helena.stegherr@uni-a.de>",
    "Jonathan Wurth <jonathan.wurth@uni-a.de>",
]
edition = "2021"
description = "A framework for modular construction and evaluation of metaheuristics."
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/mahf-opt/mahf"
keywords = ["heuristic", "metaheuristic", "optimization"]
categories = ["science", "algorithms"]

[dependencies]
better_any = { version = "0.2.0", features = ["derive"] }
thiserror = "2.0.12"
eyre = "0.6.12"
color-eyre = "0.6.3"
trait-set = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
erased-serde = "0.4.6"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "add", "mul", "not"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
dyn-clone = "1.0.19"
derivative = "2.2.0"
ciborium = "0.2.2"
serde_json = "1.0.140"
rayon = "1.10.0"
test-case = "3.3.1"
float_eq = "1.0.1"
contracts = "0.6.3"
itertools = "0.10.5"
ron = "=0.8.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
statrs = "0.16"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "default"
harness = false
