[package]
name = "mahf-derive"
version = "0.1.0"
authors = ["Leopold Luley <git@leopoldluley.de>", "Helena Stegherr <helena.stegherr@uni-a.de>", "Jonathan Wurth <jonathan.wurth@uni-a.de>"]
edition = "2021"
description = "Derive macros for MAHF."
license = "GPL-3.0-or-later"
repository = "https://github.com/mahf-opt/mahf"
keywords = ["heuristic", "metaheuristic", "optimization"]
categories = ["science", "algorithms"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"